# app/router/route.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"kodegiri/app/controller/auth"
+	"kodegiri/app/controller/tiermanagement"
 
 	jwtware "github.com/gofiber/contrib/jwt"
 	"github.com/gofiber/fiber/v2"
@@ -25,12 +26,10 @@ func Handle(app *fiber.App) {
 		SigningKey: jwtware.SigningKey{Key: []byte("s3cret!!443")},
 	}))
 
-	protected.Get("/protected", func(c *fiber.Ctx) error {
-		return c.Status(200).JSON(
-			fiber.Map{
-				"status":  200,
-				"message": "restricted api",
-			},
-		)
-	})
+	// tier management route
+	protected.Get("/tier-management", tiermanagement.ListTierManagement)
+	protected.Post("/tier-management", tiermanagement.StoreTierManagement)
+	protected.Get("/tier-management/:id", tiermanagement.DetailTierManagement)
+	protected.Put("/tier-management/:id", tiermanagement.UpdateTierManagement)
+	protected.Delete("/tier-management/:id", tiermanagement.DeleteTierManagement)
 }
