# docs/swagger.json
@@ -55,6 +55,32 @@
                     "type": "string"
                 }
             }
+        },
+        "model.Tier": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "maximal_point": {
+                    "type": "integer"
+                },
+                "minimal_point": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
         }
     }
 }
